Bug 281320 - Errors in subtag handling in Peoples-Browser
Summary: Errors in subtag handling in Peoples-Browser
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Faces-Workflow (other bugs)
Version First Reported In: 2.1.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-04 13:47 UTC by Arnd
Modified: 2017-08-15 21:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arnd 2011-09-04 13:47:31 UTC
Version:           2.0.0 (using KDE 4.7.0) 
OS:                Linux

Tags created with Right-Mouse-Button->New Tag... on  people don't show up in tag list.

A work around via tags-browser shows another error (details in steps to reproduce).

Reproducible: Always

Steps to Reproduce:
Example use case: I have created peoples a, b and c and tagged some faces. Now I want to put tags a, b and c as sub-tags into tag "family x", which does not exist so far. So in the peoples-browser I right click on top level tag "people", select "new tag" and enter "family x". The new tag is created but does not show up in the list. Restarting Digikam does not help at this point.

Work around: Next I go to the tags-browser, where my new tag is visible. I move tags a, b and c via drag and drop into the "family x" tag. Going back to the peoples-browser, "family x" is still not visible. Restarting Digikam at this point helps: "family x" together with subtags a, b and c are now visible in the peoples-browser.

Moving tags as subtags to other tags inside the peoples-browser works, once you can see the destination.


Expected Results:  
Subtag handling in peoples-browser and tags-browser should work consistently and concurrently.
Comment 1 caulier.gilles 2011-09-04 15:00:16 UTC
Can you try with current implementation from git master, next 2.1.0 release ?

Gilles Caulier
Comment 2 Arnd 2011-09-05 21:49:47 UTC
I have built digikam-git from the Arch-Linux AUR repository, which pulls current sources from git. It shows version 2.1.0. The problem still exists.

Arnd Diestelhorst
Comment 3 Marcel Wiesweg 2011-10-08 16:21:51 UTC
Git commit 78430b73fb612c8a8b178699194bdd7f9102035b by Marcel Wiesweg.
Committed on 08/10/2011 at 17:51.
Pushed by mwiesweg into branch 'master'.

Ensure the filtering is brought up to date when moving or renaming a tag

CCBUG: 281320

M  +1    -0    digikam/album/albummanager.cpp
M  +2    -9    libs/models/albumfiltermodel.cpp

http://commits.kde.org/digikam/78430b73fb612c8a8b178699194bdd7f9102035b
Comment 4 caulier.gilles 2011-10-09 00:09:52 UTC
Git commit 61235b2409cf077d5f24505b7a09479809aa2986 by Marcel Wiesweg.
Committed on 08/10/2011 at 18:19.
Pushed by mwiesweg into branch 'master'.

When creating or moving a tag under the person parent tag, make it a person tag

BUG: 281320

M  +2    -1    NEWS
M  +14   -0    digikam/album/albummanager.cpp

http://commits.kde.org/digikam/61235b2409cf077d5f24505b7a09479809aa2986