When creating or moving a tag under the person parent tag, make it a person tag

BUG: 281320